feat: get all sales
